@@ -4,6 +4,7 @@ import net.semanticmetadata.lire.builders.DocumentBuilder;
 import net.semanticmetadata.lire.imageanalysis.features.GlobalFeature;
 import net.semanticmetadata.lire.indexers.hashing.BitSampling;
 import net.semanticmetadata.lire.indexers.hashing.MetricSpaces;
+import net.semanticmetadata.lire.indexers.parallel.WorkItem;
 import net.semanticmetadata.lire.utils.CommandLineUtils;
 import net.semanticmetadata.lire.utils.LuceneUtils;
 import net.semanticmetadata.lire.utils.SerializationUtils;
@@ -14,10 +15,8 @@ import org.apache.lucene.util.BytesRef;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.Properties;
+import java.util.*;
+import java.util.concurrent.LinkedBlockingQueue;
 
 /**
  * Reading a file from {@link ParallelExtraction} and writing it to a lucene index.
@@ -37,6 +36,9 @@ public class LuceneIndexWriter extends AbstractDocumentWriter {
 
     // -------------< instance >------------------------
     private IndexWriter iw;
+    protected LinkedBlockingQueue<QueueItem> queue = new LinkedBlockingQueue<>(500);
+    List<Thread> threads;
+    private int numThreads = 8;
 
     public LuceneIndexWriter(File infile, File indexDirectory, boolean doHashingBitSampling, boolean doMetricSpaceIndexing, boolean useDocValues) throws IOException {
         super(infile, useDocValues, doHashingBitSampling, doMetricSpaceIndexing);
@@ -54,8 +56,12 @@ public class LuceneIndexWriter extends AbstractDocumentWriter {
         } else {
             try {
                 LuceneIndexWriter liw = new LuceneIndexWriter(inputFile, outputFile, cmdLine.containsKey("-hb"), cmdLine.containsKey("-hm"), cmdLine.containsKey("-d"));
-                liw.run();
+                Thread t = new Thread(liw);
+                t.start();
+                t.join();
             } catch (IOException e) {
+                e.printStackTrace();
+            } catch (InterruptedException e) {
                 e.printStackTrace();
             }
         }
@@ -67,6 +73,16 @@ public class LuceneIndexWriter extends AbstractDocumentWriter {
      */
     protected void finishWriting() {
         try {
+            for (int i = 0; i < 20; i++) {
+                queue.put(new QueueItem(null, null));
+            }
+            for (Iterator<Thread> iterator = threads.iterator(); iterator.hasNext(); ) {
+                iterator.next().join();
+            }
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        try {
             iw.commit();
             iw.close();
         } catch (IOException e) {
@@ -76,42 +92,118 @@ public class LuceneIndexWriter extends AbstractDocumentWriter {
 
     @Override
     protected void startWriting() {
-        // do nothing in this case.
+        threads = new LinkedList<>();
+        for (int i = 0; i < numThreads; i++) {
+            Thread t = new Thread(new Consumer());
+            t.start();
+            threads.add(t);
+        }
     }
 
     /**
      * Called for each line in the file.
-     * @param fileName the content of the first column
+     *
+     * @param fileName       the content of the first column
      * @param listOfFeatures the 2nd to nth column values already parsed.
      */
     protected void write(String fileName, ArrayList<GlobalFeature> listOfFeatures) {
-        LinkedList<IndexableField> fields = new LinkedList<>();
-        // add all the features.
-        for (Iterator<GlobalFeature> iterator = listOfFeatures.iterator(); iterator.hasNext(); ) {
-            GlobalFeature globalFeature = iterator.next();
-            // feature vector:
-            if (!useDocValues) {
-                fields.add(new StoredField(globalFeature.getFieldName(), new BytesRef(globalFeature.getByteArrayRepresentation())));
-            } else {
-                // Alternative: The DocValues field. It's extremely fast to read, but it's all in RAM most likely.
-                fields.add(new BinaryDocValuesField(globalFeature.getFieldName(), new BytesRef(globalFeature.getByteArrayRepresentation())));
+        // clone the features first:
+        ArrayList<GlobalFeature> tmp = new ArrayList<>(listOfFeatures.size());
+        try {
+            for (Iterator<GlobalFeature> iterator = listOfFeatures.iterator(); iterator.hasNext(); ) {
+                GlobalFeature f = iterator.next();
+                GlobalFeature n = (GlobalFeature) f.getClass().newInstance();
+                n.setByteArrayRepresentation(f.getByteArrayRepresentation());
+                tmp.add(n);
             }
-            // hashing:
-            if (doHashingBitSampling) {
-                fields.add(new TextField(globalFeature.getFieldName() + DocumentBuilder.HASH_FIELD_SUFFIX,
-                        SerializationUtils.arrayToString(BitSampling.generateHashes(globalFeature.getFeatureVector())), Field.Store.YES));
-            } else if (doMetricSpaceIndexing) {
-                if (MetricSpaces.supportsFeature(globalFeature)) {
-                    fields.add(new TextField(globalFeature.getFieldName() + DocumentBuilder.HASH_FIELD_SUFFIX,
-                            MetricSpaces.generateHashString(globalFeature), Field.Store.YES));
+            queue.put(new QueueItem(fileName, tmp));
+        } catch (InstantiationException e) {
+            e.printStackTrace();
+        } catch (IllegalAccessException e) {
+            e.printStackTrace();
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    class QueueItem {
+        String id;
+        List<GlobalFeature> features;
+
+        public QueueItem(String id, List<GlobalFeature> features) {
+            this.id = id;
+            this.features = features;
+        }
+    }
+
+    class Consumer implements Runnable {
+        HashMap<String, Object> document = new HashMap<>();
+
+        @Override
+        public void run() {
+            try {
+                QueueItem data = queue.take();
+                while (data.id != null) {
+                    document.clear();
+                    document.put(DocumentBuilder.FIELD_NAME_IDENTIFIER, data.id);
+                    document.put("title", data.id);
+                    for (Iterator<GlobalFeature> iterator = data.features.iterator(); iterator.hasNext(); ) {
+                        GlobalFeature f = iterator.next();
+                        document.put(f.getFieldName(), f.getByteArrayRepresentation());
+                        if (doHashingBitSampling) {
+                            document.put(f.getFieldName() + DocumentBuilder.HASH_FIELD_SUFFIX,
+                                    SerializationUtils.arrayToString((BitSampling.generateHashes(f.getFeatureVector()))));
+
+                        } else if (doMetricSpaceIndexing) {
+                            if (MetricSpaces.supportsFeature(f)) {
+                                document.put(f.getFieldName() + DocumentBuilder.HASH_FIELD_SUFFIX,
+                                        MetricSpaces.generateHashString(f));
+                            }
+
+                        }
+                    }
+                    output(document);
+                    data = queue.take();
                 }
+            } catch (InterruptedException e) {
+                e.printStackTrace();
             }
         }
-        fields.add(new StringField(DocumentBuilder.FIELD_NAME_IDENTIFIER, fileName, Field.Store.YES));
-        try {
-            iw.addDocument(fields);
-        } catch (IOException e) {
-            e.printStackTrace();
+
+        private void output(HashMap<String, Object> document) {
+            StringBuilder sb = new StringBuilder();
+            sb.append("<doc>");
+            for (Iterator<String> iterator = document.keySet().iterator(); iterator.hasNext(); ) {
+                String fieldName = iterator.next();
+                sb.append("<field name=\"" + fieldName + "\">");
+                sb.append(document.get(fieldName));
+                sb.append("</field>");
+            }
+            sb.append("</doc>\n");
+            LinkedList<IndexableField> fields = new LinkedList<>();
+            // add all the features.
+            for (Iterator<String> iterator = document.keySet().iterator(); iterator.hasNext(); ) {
+                String fieldName = iterator.next();
+                if (fieldName.startsWith("id") || fieldName.startsWith("title") || fieldName.startsWith(DocumentBuilder.FIELD_NAME_IDENTIFIER) ) {
+                    fields.add(new StringField(fieldName, (String) document.get(fieldName), Field.Store.YES));
+                } else if (fieldName.endsWith(DocumentBuilder.HASH_FIELD_SUFFIX)) {
+                    fields.add(new TextField(fieldName, (String) document.get(fieldName), Field.Store.NO));
+                } else {
+                    if (!useDocValues) {
+                        fields.add(new StoredField(fieldName, (byte[]) document.get(fieldName)));
+                    } else {
+                        // Alternative: The DocValues field. It's extremely fast to read, but it's all in RAM most likely.
+                        fields.add(new BinaryDocValuesField(fieldName, new BytesRef((byte[]) document.get(fieldName))));
+                    }
+                }
+            }
+            try {
+                synchronized (iw) {
+                    iw.addDocument(fields);
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
         }
     }
 
